--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -76,7 +76,7 @@ $fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
 
 /* HOME */
 
-body.home.editing {
+body.home {
     #page-content {
         #region-main-box {
             #region-main {
@@ -505,7 +505,7 @@ body.home:not(.editing) {
 
 /* MÓDULOS */
 
-body:not(.home).editing {
+body:not(.home) {
     #page {
         #topofscroll {
             /* contenido general */
