--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -41,8 +41,9 @@ $fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
 
 .secondary-navigation.d-print-none {
     margin-top: 3rem;
+    padding-bottom: 0 !important;
     nav.moremenu.navigation.observed {
-        padding: 0;
+        //padding: 0;
         border-bottom: 0;
         ul {
             li {
@@ -234,7 +235,7 @@ body.home {
 /* HOME: EXCLUSIVO CON EDICIÓN ACTIVADA */
 
 body.home.editing {
-    li.section {
+    li:not(#section-0).section {
         padding: 2rem !important;
     }
 }
