--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -246,6 +246,7 @@ body.home.editing {
 body.home:not(.editing) {
     li:not(#section-0).section {
         position: relative;
+        overflow: hidden; // Evita que la animación se salga de la tarjeta
         min-height: 12rem;
         border-bottom: 0;
         padding: 0 !important;
@@ -258,7 +259,7 @@ body.home:not(.editing) {
                 width: 100%;
                 height: 100%;
                 //display: block;
-                z-index: 1000;
+                //z-index: 1000;
                 a:first-of-type {
                     @include title;
                     text-transform: uppercase;
@@ -269,20 +270,32 @@ body.home:not(.editing) {
                     width: 100%;
                     height: 100%;
                     display: block;
-                    z-index: 1000;
-                    &:hover {
+                    z-index: 2;
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        width: 0;
+                        height: 0;
+                        background-color: rgba(0, 0, 0, 0.15);
+                        border-radius: 50%;
+                        transform: translate(-50%, -50%);
+                        transition: width 0.4s ease-out, height 0.4s ease-out;
+                        z-index: -1; // Se coloca detrás del texto
+                    }
+                    &:hover:before {
+                        width: 250%;
+                        height: 250%;
+                    }
+                    /* &:hover {
                         text-decoration: none;
                         background-color: rgba(0, 0, 0, 0.15);
-                    }
+                    } */
                     @media (max-width: 576px) {
                         padding: 1.5rem 1.5rem;
                     }
                 }
-                /* a.quickeditlink.aalink {
-                    position: absolute;
-                    top: 0;
-                    left: 1.5rem;
-                } */
             }
         }
         .content {
@@ -339,17 +352,6 @@ body.home:not(.editing) {
                     }
                 }
             }
-            /* .mdl-left.py-2.changenumsections {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                padding: 0 !important;
-                a {
-                    position: absolute;
-                    bottom: 1rem;
-                    left: 1.5rem;
-                }
-            } */
         }
     }
 }
