--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -263,6 +263,7 @@ body.home:not(.editing) {
                 a:first-of-type {
                     @include title;
                     text-transform: uppercase;
+                    text-decoration: none;
                     position: absolute;
                     top: 0;
                     left: 0;
@@ -274,19 +275,18 @@ body.home:not(.editing) {
                     &:before {
                         content: "";
                         position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        width: 0;
-                        height: 0;
+                        top: 20%;
+                        left: 10%;
+                        width: 10px; // Tamaño inicial pequeño
+                        height: 10px;
                         background-color: rgba(0, 0, 0, 0.15);
                         border-radius: 50%;
-                        transform: translate(-50%, -50%);
-                        transition: width 0.4s ease-out, height 0.4s ease-out;
-                        z-index: -1; // Se coloca detrás del texto
+                        transform: translate(-50%, -50%) scale(0);
+                        transition: transform 0.5s ease-out;
+                        z-index: -1;
                     }
                     &:hover:before {
-                        width: 250%;
-                        height: 250%;
+                        transform: translate(-50%, -50%) scale(250); // Crece uniformemente
                     }
                     /* &:hover {
                         text-decoration: none;
