--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -641,31 +641,64 @@ body:not(.home) {
                                             .botonera {
                                                 margin-top: 5rem;
                                                 .btn-hero {
+                                                    position: relative;
+                                                    overflow: hidden; // Evita que el efecto se desborde
                                                     border: 1px solid $grey2;
                                                     border-radius: 500px;
                                                     padding: 10px 20px 10px 50px;
                                                     text-decoration: none !important;
                                                     color: $primary !important;
                                                     font-weight: 400;
-                                                    background-repeat: no-repeat;
-                                                    background-position: left 20px center;
                                                     display: inline-block;
-                                                    background-size: 20px;
                                                     margin-right: 20px;
                                                     margin-bottom: 20px;
+                                                    transition: border-color 0.3s ease-out, color 0.3s ease-out;
+                                                    span {
+                                                        position: relative;
+                                                        z-index: 2; // Mantiene el texto por encima del círculo
+                                                        &:hover {
+                                                            color: $primary;
+                                                        }
+                                                    }
+                                                    &:after {
+                                                        content: "";
+                                                        position: absolute;
+                                                        top: 50%;
+                                                        left: 20px; // Ajustar según el diseño
+                                                        width: 20px; // Tamaño del icono
+                                                        height: 20px;
+                                                        background-size: contain;
+                                                        background-repeat: no-repeat;
+                                                        transform: translateY(-50%);
+                                                        z-index: 2; // Se mantiene por encima del círculo
+                                                    }
+                                                    &:before {
+                                                        content: "";
+                                                        position: absolute;
+                                                        top: 50%;
+                                                        left: 50%;
+                                                        width: 10px;
+                                                        height: 10px;
+                                                        background-color: $secondary;
+                                                        border-radius: 50%;
+                                                        transform: translate(-50%, -50%) scale(0);
+                                                        transition: transform 0.4s ease-out;
+                                                        z-index: 1;
+                                                    }
+                                                    &:hover:before {
+                                                        transform: translate(-50%, -50%) scale(30); // Hace crecer el círculo
+                                                    }
                                                     &:hover {
                                                         border-color: $secondary;
-                                                        background-color: $secondary;
-                                                        color: $primary;
                                                     }
                                                 }
-                                                .btn-vermas {
+                                                .btn-vermas:after {
                                                     background-image: url(../../../base/img/icon_plus.svg);
                                                 }
-                                                .btn-ed {
+                                                .btn-ed:after {
                                                     background-image: url(../../../base/img/icon_chat.svg);
                                                 }
-                                                .btn-wp {
+                                                .btn-wp:after {
                                                     background-image: url(../../../base/img/icon-wp.svg);
                                                 }
                                             }
