--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -243,7 +243,7 @@ body.home.editing {
 
 /* HOME: EXCLUSIVO CON EDICIÓN DESACTIVADA */
 
-body.home {
+body.home:not(.editing) {
     li:not(#section-0).section {
         position: relative;
         overflow: hidden; // Evita que la animación se salga de la tarjeta
