--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -48,25 +48,47 @@ $fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
         ul {
             li {
                 margin-right: 10px;
-                a.nav-link.active.active_tree_node {
-                    background: $primary;
-                    &:hover {
-                        background-color: $grey2;
-                        color: $primary;
-                    }
-                }
                 a.nav-link {
+                    position: relative;
+                    overflow: hidden; // Evita desbordamientos
                     padding: 0.5rem 1rem;
                     border-radius: 500px;
                     height: initial;
                     border-bottom: 0;
+                    transition: color 0.3s ease-out;
+                    z-index: 2; // Asegura que el texto esté por encima del círculo
                     &:hover {
                         border-bottom: 0;
-                        background-color: $grey2;
                         color: $primary;
                     }
                     &:focus {
                         box-shadow: none;
+                    }
+                    // Efecto de círculo expansivo en hover
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        width: 10px;
+                        height: 10px;
+                        background-color: $grey2; // Color de hover
+                        border-radius: 50%;
+                        transform: translate(-50%, -50%) scale(0);
+                        transition: transform 0.3s ease-out;
+                        z-index: -1; // Mantiene el círculo detrás del texto
+                    }
+                    &:hover:before {
+                        transform: translate(-50%, -50%) scale(20);
+                    }
+                    // Ajuste especial para el botón activo
+                    &.active.active_tree_node {
+                        background: $primary;
+                        color: white;
+                        &:hover {
+                            //background-color: $grey2;
+                            color: $primary;
+                        }
                     }
                 }
             }
