--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -805,8 +805,8 @@ body:not(.editing) {
                 .instancename {
                     background-image: url(../../../base/img/punto-verde.svg);
                     padding-left: 70px;
-                    background-size: 19px auto;
-                    background-position: left center;
+                    background-size: 15px auto;
+                    background-position: left 20px center;
                     background-repeat: no-repeat;
                     padding-top: 5px;
                     padding-bottom: 5px;
