script para que afecte todo el curso el css y js

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -165,6 +165,7 @@ body.home {
                             /* módulo completado */
                             li.section.completo {
                                 background-color: $grey1;
+                                border: none !important;
                                 .course-section-header {
                                     h3.sectionname {
                                         a:first-of-type {}
