cambios en archivo js

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -940,7 +940,7 @@ body:not(.home) {
                                     margin-right: 0 !important;
                                     padding: 2.5rem;
                                     line-height: 1.4;
-                                    margin-bottom: 4rem;
+                                    margin-bottom: 2.4rem !important;
                                 }
                                 .destacado {
                                     background-color: $grey1;
