foros primeros cambios

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -383,6 +383,103 @@ body.home:not(.editing) {
 /* GENERAL - para elementos repetidos en home y modulos */
 
 #page-wrapper {
+    /* boton primario */
+    a.btn.btn-primary {
+        position: relative;
+        background-color: $primary !important;
+        background-image: none;
+        overflow: hidden; // Evita desbordamientos
+        padding: 0.5rem 1rem;
+        border-radius: 500px;
+        height: initial;
+        border-bottom: 0;
+        transition: color 0.3s ease-out;
+        z-index: 2; // Asegura que el texto esté por encima del círculo
+        &:hover {
+            border-bottom: 0;
+            color: $primary;
+            outline: none;
+        }
+        &:focus {
+            box-shadow: none !important;
+            outline: none !important;
+        }
+        // Efecto de círculo expansivo en hover
+        &:before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 10px;
+            height: 10px;
+            background-color: $grey2; // Color de hover
+            border-radius: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            transition: transform 0.3s ease-out;
+            z-index: -1; // Mantiene el círculo detrás del texto
+        }
+        &:hover:before {
+            transform: translate(-50%, -50%) scale(40);
+        }
+    }
+    /* boton secundario */
+    a.btn.btn-secondary {
+        position: relative;
+        background-color: white !important;
+        color: $primary !important;
+        background-image: none;
+        overflow: hidden; // Evita desbordamientos
+        padding: 0.5rem 1rem;
+        border-radius: 500px;
+        border: 1px solid $grey2;
+        border-bottom: 1px solid $grey2 !important;
+        height: initial;
+        border-bottom: 0;
+        transition: color 0.3s ease-out;
+        z-index: 2; // Asegura que el texto esté por encima del círculo
+        &:hover {
+            border-bottom: 0;
+            color: $primary;
+            outline: none;
+        }
+        &:focus {
+            box-shadow: none !important;
+            outline: none !important;
+        }
+        // Efecto de círculo expansivo en hover
+        &:before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 10px;
+            height: 10px;
+            background-color: $grey2; // Color de hover
+            border-radius: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            transition: transform 0.3s ease-out;
+            z-index: -1; // Mantiene el círculo detrás del texto
+        }
+        &:hover:before {
+            transform: translate(-50%, -50%) scale(40);
+        }
+    }
+    /* boton volver */
+    p#volver {
+        margin-bottom: 0;
+        a {
+            color: $primary;
+            text-decoration: none;
+            font-weight: 400 !important;
+            &:hover {
+                color: $grey3 !important;
+                text-decoration: none;
+            }
+            &:focus {
+                box-shadow: none;
+            }
+        }
+    }
     /* solapa derecha */
     #theme_boost-drawers-blocks {
         .drawerheader {
@@ -602,18 +699,6 @@ body:not(.home) {
                                                         .no-overflow {
                                                             h1 {
                                                                 @include title;
-                                                            }
-                                                            p#volver {
-                                                                a {
-                                                                    color: $primary;
-                                                                    &:hover {
-                                                                        color: $grey3;
-                                                                        text-decoration: none;
-                                                                    }
-                                                                    &:focus {
-                                                                        box-shadow: none;
-                                                                    }
-                                                                }
                                                             }
                                                         }
                                                     }
@@ -868,21 +953,6 @@ body:not(.home) {
                                         text-decoration-color: $grey3;
                                     }
                                 }
-                                p.volver {
-                                    margin-bottom: 0;
-                                    a {
-                                        color: $primary;
-                                        text-decoration: none;
-                                        font-weight: 400;
-                                        &:hover {
-                                            color: $grey3;
-                                            text-decoration: none;
-                                        }
-                                        &:focus {
-                                            box-shadow: none;
-                                        }
-                                    }
-                                }
                                 h1 {
                                     @include title;
                                     margin-bottom: 4rem;
@@ -960,6 +1030,23 @@ body:not(.home) {
                         display: none;
                     }
                 }
+            }
+        }
+    }
+}
+
+
+/* FOROS */
+
+#page-mod-forum-view {
+    #region-main {
+        .activity-header {
+            background-color: transparent;
+            padding: 0;
+            border: none;
+            h1 {
+                @include title;
+                margin-top: 4rem;
             }
         }
     }
